# rk3588-yolo-demo

./: 8vs10.xlsx  LICENSE  readme.md  yolov8n-ros2.md
src/yolov8/: .gitignore  CMakeLists.txt  camera_demo.cpp  common.h  image_process.cpp  image_process.h  imagefile_demo.cpp  main.cpp  postprocess.cpp  rknn_pool.cpp  rknn_pool.h  threadpool.h  videofile.cpp  videofile.h  videofile_demo.cpp  yolov8.cpp  yolov8.h
src/yolov8/include/: Float16.h  camera.h  common.h  image_process.h  postprocess.h  rknn_pool.h  threadpool.h  videofile.h  yolov8.h
src/yolov8/model/: .gitignore  dotav1.txt  yolov10n-2.0.0.rknn
src/yolov8/utils/: CMakeLists.txt  camera.cpp  image_process.cpp  postprocess.cpp  rknn_pool.cpp  videofile.cpp  yolov8.cpp
